--- a/index.html
+++ b/index.html
@@ -1,11 +1,91 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h2>Hello World</h2>
-</body>
+<html>
+    <head>
+        <title> Find it, Love it, Buy it | Asadstore.com</title>
+    </head>
+    <body>
+        <table border="1px" align="center">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>What's App</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2</td>
+                    <td colspan="2">Asad Mukhtar</td>
+                    <td>0000000000</td>
+                    <td>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Asad</td>
+                    <td>Axad03213@gmail.com</td>
+                    <td>0000000000</td>
+                    <td>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Asad</td>
+                    <td>Axad03213@gmail.com</td>
+                    <td>0000000000</td>
+                    <td>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Asad</td>
+                    <td>Axad03213@gmail.com</td>
+                    <td>0000000000</td>
+                    <td>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Asad</td>
+                    <td>Axad03213@gmail.com</td>
+                    <td>0000000000</td>
+                    <td>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Asad</td>
+                    <td>Axad03213@gmail.com</td>
+                    <td>0000000000</td>
+                    <td>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <hr />
+        <!-- Here is header  -->
+        <div style="border:1px solid black; padding:1%; margin-top:5%; color:red; background-color:black;">
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo veritatis rerum possimus obcaecati numquam nulla fugiat libero minus tempora accusantium illo vel laborum, eaque repudiandae esse. Magnam nam incidunt quam?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nam voluptates ipsa minima culpa expedita quaerat labore corporis quibusdam sequi nisi accusantium eum sed suscipit magnam id excepturi, et aperiam.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, labore saepe aperiam veniam voluptatem nobis nisi laborum laboriosam eos totam distinctio molestias illo similique quidem! Harum non totam quibusdam fuga!
+            </p>
+        </div>
+        <h1 style="color:pink;">Hello Frineds, Subscribe @asadmukhtarr</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ullam aut, atque nulla temporibus enim veniam perferendis cum est quia odit consectetur modi nostrum eius blanditiis amet similique quasi at.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate expedita esse ab quisquam maiores officia. Voluptatum quidem, delectus ad dicta, debitis voluptas totam suscipit perferendis doloremque voluptate quo dignissimos dolorum tempora consequuntur architecto quaerat. Exercitationem, quos et ad error modi molestiae doloremque officia, sequi quod ipsa dignissimos! Beatae unde nam similique fugit dolore, tempore saepe voluptatibus voluptas culpa quibusdam dolorum necessitatibus odio perferendis nostrum repudiandae sint impedit. Ex officiis esse non magnam repellendus similique. Pariatur excepturi officiis nostrum tempore ducimus atque eius dolor quidem impedit, ipsum modi enim laudantium vitae sit eligendi unde a asperiores dolorum. Debitis culpa quisquam quo.
+        </p>
+        <label>Hello First Label</label>
+        <input type="number"> <br />
+        <img src="images/one.jpg" height="300px" />
+        <hr />
+    </body>
 </html>
