--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
         <title> Find it, Love it, Buy it | Asadstore.com</title>
     </head>
     <body>
+        <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+        <a href="https://youtube.com/" target="_blank">Youtube</a>
+        <a href="https://www.w3schools.com/html/default.asp">W3schools</a>
+        <ul>
+            <li><a href="index.html"> Home </a></li>
+            <li><a href="about.html"> About </a></li>
+            <li><a href="products.html"> Products </a></li>
+            <li><a href="login.html"> Login </a></li>
+            <li><a href="contact.html"> Contact </a></li>
+        </ul>
         <table border="1px" align="center">
             <thead>
                 <tr>
