--- a/about.html
+++ b/about.html
@@ -4,42 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/about.css">
 </head>
-<style>
-    .box {
-        border:1px solid #dd0000; 
-        padding:0.5%; 
-        width:90%; 
-        background-color:#04AA6D;
-    }
-    .box:hover{
-        background-color:pink;
-    }
-    .lister {
-        background-color: gray;
-        list-style-type: none;
-    }
-    .lister > li  {
-        float: left;
-        margin-right:20px;
-    }
-    .lister > li > a {
-        text-decoration: none;
-        padding:6%;
-    }
-    .lister > li > a:hover {
-        background-color: blue;
-        color: white;
-    }
-</style>
 <body>
-    <ul class="lister">
-        <li><a href="index.html"> Home </a></li>
-        <li><a href="about.html"> About </a></li>
-        <li><a href="products.html"> Products </a></li>
-        <li><a href="login.html"> Login </a></li>
-        <li><a href="contact.html"> Contact </a></li>
-    </ul> 
+    <div class="navbar">
+        <ul class="lister">
+            <li><a href="index.html"> Home </a></li>
+            <li><a href="about.html"> About </a></li>
+            <li><a href="products.html"> Products </a></li>
+            <li><a href="login.html"> Login </a></li>
+            <li><a href="contact.html"> Contact </a></li>
+        </ul>
+    </div> 
     <br /> <br /> <br />
     <hr />
     <div class="box">
@@ -97,5 +73,6 @@
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus molestiae iusto neque fugit, blanditiis voluptates vel quisquam tempora maiores, sunt saepe nesciunt. Labore totam itaque aliquam molestias corrupti ea sit!
         <p>
     </div>
+    <div id="box3"></div>
 </body>
 </html>
