--- a/index.html
+++ b/index.html
@@ -1,101 +1,87 @@
 <html>
     <head>
         <title> Find it, Love it, Buy it | Asadstore.com</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
+    <style>
+        .nav-link {
+            color:white !important;
+        }
+        .card {
+            border-radius: 0px !important;
+        }
+        .bg-c {
+            background-color: purple !important;
+        }
+    </style>
     <body>
-        <a href="https://www.facebook.com/" target="_blank">Facebook</a>
-        <a href="https://youtube.com/" target="_blank">Youtube</a>
-        <a href="https://www.w3schools.com/html/default.asp">W3schools</a>
-        <ul>
-            <li><a href="index.html"> Home </a></li>
-            <li><a href="about.html"> About </a></li>
-            <li><a href="products.html"> Products </a></li>
-            <li><a href="login.html"> Login </a></li>
-            <li><a href="contact.html"> Contact </a></li>
-        </ul>
-        <table border="1px" align="center">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>What's App</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>2</td>
-                    <td colspan="2">Asad Mukhtar</td>
-                    <td>0000000000</td>
-                    <td>
-                        <button>Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Asad</td>
-                    <td>Axad03213@gmail.com</td>
-                    <td>0000000000</td>
-                    <td>
-                        <button>Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Asad</td>
-                    <td>Axad03213@gmail.com</td>
-                    <td>0000000000</td>
-                    <td>
-                        <button>Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Asad</td>
-                    <td>Axad03213@gmail.com</td>
-                    <td>0000000000</td>
-                    <td>
-                        <button>Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Asad</td>
-                    <td>Axad03213@gmail.com</td>
-                    <td>0000000000</td>
-                    <td>
-                        <button>Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Asad</td>
-                    <td>Axad03213@gmail.com</td>
-                    <td>0000000000</td>
-                    <td>
-                        <button>Delete</button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <hr />
-        <!-- Here is header  -->
-        <div style="border:1px solid black; padding:1%; margin-top:5%; color:red; background-color:black;">
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo veritatis rerum possimus obcaecati numquam nulla fugiat libero minus tempora accusantium illo vel laborum, eaque repudiandae esse. Magnam nam incidunt quam?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nam voluptates ipsa minima culpa expedita quaerat labore corporis quibusdam sequi nisi accusantium eum sed suscipit magnam id excepturi, et aperiam.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, labore saepe aperiam veniam voluptatem nobis nisi laborum laboriosam eos totam distinctio molestias illo similique quidem! Harum non totam quibusdam fuga!
-            </p>
-        </div>
-        <h1 style="color:pink;">Hello Frineds, Subscribe @asadmukhtarr</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ullam aut, atque nulla temporibus enim veniam perferendis cum est quia odit consectetur modi nostrum eius blanditiis amet similique quasi at.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate expedita esse ab quisquam maiores officia. Voluptatum quidem, delectus ad dicta, debitis voluptas totam suscipit perferendis doloremque voluptate quo dignissimos dolorum tempora consequuntur architecto quaerat. Exercitationem, quos et ad error modi molestiae doloremque officia, sequi quod ipsa dignissimos! Beatae unde nam similique fugit dolore, tempore saepe voluptatibus voluptas culpa quibusdam dolorum necessitatibus odio perferendis nostrum repudiandae sint impedit. Ex officiis esse non magnam repellendus similique. Pariatur excepturi officiis nostrum tempore ducimus atque eius dolor quidem impedit, ipsum modi enim laudantium vitae sit eligendi unde a asperiores dolorum. Debitis culpa quisquam quo.
-        </p>
-        <label>Hello First Label</label>
-        <input type="number"> <br />
-        <img src="images/one.jpg" height="300px" />
-        <hr />
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-c">
+                <div class="container">
+                    <a href="#" class="navbar-brand text-white">
+                       <i class="fa fa-truck"></i> Asad Mukhtar
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarasad" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarasad">
+                        <ul class="navbar-nav mb-2 mb-lg-0 text-white">
+                            <li class="nav-item">
+                                <a href="#" class="nav-link"> <i class="fa fa-home"></i> Home</a>    
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link"> <i class="fa fa-pencil" aria-hidden="true"></i> About</a>    
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link"> <i class="fa fa-list"></i> Products</a>    
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link"> <i class="fa fa-handshake-o"></i> Contact</a>    
+                            </li>
+                        </ul>
+                        <ul  class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa fa-user-circle"></i> My Account
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Login</a></li>
+                                    <li><a class="dropdown-item" href="#">Register</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="btn btn-sm btn-warning position-relative mt-1">
+                                    <i class="fa fa-shopping-bag" aria-hidden="true"></i> Cart
+                                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                    99+
+                                    <span class="visually-hidden">unread messages</span>
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <section>
+            <div class="card bg-c p-3 text-white">
+                <div class="container">
+                    <div class="card-body">
+                        <h2> 
+                            <i class="fa fa-tree" aria-hidden="true"></i>
+                             Welcome to shopping cart ..
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde reprehenderit sapiente doloribus quidem doloremque exercitationem! Ea, quisquam veniam et repudiandae distinctio illo ab dolore deserunt delectus cum, iusto dicta corrupti.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime natus commodi vitae, officiis labore quam optio similique assumenda excepturi, a sint modi dolorum dolorem, nulla libero autem molestiae voluptas nihil.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit tempore asperiores aliquam maiores ratione assumenda amet aspernatur a rerum, ea fugiat harum similique corporis eligendi dignissimos quis, fuga ab minus.
+                        </p>
+                        <input type="text" class="form-control" placeholder="Search Here What You Want?">
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
