4th Lecture Code

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <a href="#" class="nav-link"> <i class="fa fa-home"></i> Home</a>    
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link"> <i class="fa fa-pencil" aria-hidden="true"></i> About</a>    
+                                <a href="about.html" class="nav-link"> <i class="fa fa-pencil" aria-hidden="true"></i> About</a>    
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link"> <i class="fa fa-list"></i> Products</a>    
