--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     <div class="collapse navbar-collapse" id="navbarasad">
                         <ul class="navbar-nav mb-2 mb-lg-0 text-white">
                             <li class="nav-item">
-                                <a href="index.html" class="nav-link"> <i class="fa fa-home"></i> Home</a>    
+                                <a href="index.html" class="nav-link"> 
+                                    <i class="fa fa-home"></i> Home
+                                </a>    
                             </li>
                             <li class="nav-item">
                                 <a href="about.html" class="nav-link"> <i class="fa fa-pencil" aria-hidden="true"></i> About</a>    
